# brynet

./: .clang-format  .clang-tidy  .travis.yml  CMakeLists.txt  LICENSE  README.md  accumulation-dev.sln  appveyor.yml  brynet.sln  dodo.sln  sonar-project.properties  travis-compiler.sh
.github/workflows/: build-and-test.yml  clang-format-lint.yml  clang-tidy-review.yml  cmake.yml  codeql-analysis.yml
common/: array.c  array.h  buffer.c  connection.c  connection.h  coroutine.c  dllconf.h  dnotify.h  double_link.h  event.c  event.h  fdset.c  fdset.h  heap.c  heap.h  list.c  list.h  msgnet.c  msgnet.h  multipool.c  multipool.h  mutex.c  mutex.h  rwlist.c  rwlist.h  socketlibfunction.c  socketlibfunction.h  socketlibtypes.h  stack.c  stack.h  stdbool.h  systemlib.c  thread.c  thread.h  threadpool.c  timeaction.c  timeaction.h  typepool.c  typepool.h
cpp_common/: msgqueue.h  rwlist.h  timer.cpp  timer.h  typeids.h
cpp_net/: TCPServer.cpp  TCPServer.h  TCPService.cpp  TCPService.h  WrapTCPService.cpp  WrapTCPService.h  channel.h  currentthread.cpp  currentthread.h  datasocket.cpp  datasocket.h  eventloop.cpp  eventloop.h
docs/: connector.zh-cn.md  datasocket.zh-cn.md  eventloop.zh-cn.md  listen_thread.zh-cn.md  main.zh-cn.md  merge_send.zh-cn.md  promise_receive.zh-cn.md  socket.zh-cn.md  tcp_connection.zh-cn.md  tcp_service.zh-cn.md  wrap_tcp_service.zh-cn.md
examples/: BenchWebsocket.cpp  BroadCastClient.cpp  BroadCastServer.cpp  CMakeLists.txt  ChatWebsocket.cpp  HttpClient.cpp  HttpServer.cpp  Makefile  Pgedis.cpp  PingPongClient.cpp  PingPongServer.cpp  PromiseReceive.cpp  README.md  SimpleRpcServer.cpp  SingleThreadPingPongServer.cpp  TestHttp.cpp  TestPromiseReceive.cpp  TestTimer.cpp  WebBinaryProxy.cpp  cpp_http_main.cpp  cpp_test_main.cpp  cpp_timer_test.cpp  cppnet_pingpang_client.cpp  cppnet_pingpang_server.cpp  echo_service.proto  pingpang_client.c  proto_test.cpp  testWrapService.cpp  test_coroutine.c  test_server.c
examples/DNet/: DNet.sln
examples/DNet/DNet/: DNet.vcxproj  DNet.vcxproj.filters  TCPServer.cpp  TCPServer.h  channel.h  datasocket.cpp  datasocket.h  eventloop.cpp  eventloop.h  main.cpp
examples/LuaNet/: Co.lua  Connect.lua  LuaNet.cpp  Redis.lua  Scheduler.lua  TcpService.lua  TcpSession.lua  dd.lua
examples/LuaNet/liblua/: lua53.lib  lua_readtable.h  lua_tinker.cpp  lua_tinker.h
examples/Simple_AOI/: AOI_test.sln
examples/Simple_AOI/AOI_test/: AOI_test.vcxproj  AOI_test.vcxproj.filters  aoi.cpp  aoi.h  double_link.h  main.cpp
examples/bfl/: bfl.sln
examples/bfl/bfl/: bfl.vcproj  bfl.vcxproj  bfl.vcxproj.filters
examples/broadcast/: client.cpp  server.cpp
examples/c_test/: Makefile  http_server.cpp  pingpang_client.c  pingpong_def.h  test_client.c  test_heap.c  test_server.c  test_threadpool.c  test_timer.c
examples/epollserver_test/: client.c  main.c
examples/event_test/: main.c
examples/heap_test/: heap_test.sln
examples/heap_test/heap_test/: heap_test.vcproj  main.c
examples/httpd/: httpd.sln
examples/httpd/httpd/: http_server.h  httpd.vcproj  main.cpp
examples/make_so/: makefile
examples/msgnet_test/: main.c
examples/net_test/: net_test.sln
examples/net_test/multi_net_thread_server/: gateway.c  gateway.h  main.c  multi_net_thread_server.vcproj
examples/net_test/net_client/: main.c  net_client.vcproj
examples/net_test/single_net_thread_server/: main.c  single_net_thread_server.vcproj
examples/new_epoll_test/: main.c  makefile
examples/new_iocp_test/: main.c  new_iocp_test.sln
examples/new_iocp_test/new_iocp_test/: new_iocp_test.vcproj
examples/nr_server/: nr_server.sln
examples/nr_server/nr_server/: makefile  nr_server.vcproj  nr_server.vcxproj  nr_server.vcxproj.filters
examples/nr_server/test_nr_server/: main.c
examples/pingpong/: client.cpp  server.cpp
examples/st_server/: st_server.sln
examples/st_server/st_server/: makefile  st_server.c  st_server.h  st_server.vcproj  st_server.vcxproj  st_server.vcxproj.filters
examples/test/: client.c  server.cpp  wrap_server.cpp  wrap_server.h
examples/test_thread_pool/: test_thread_pool.sln
examples/test_thread_pool/test_thread_pool/: main.c  makefile  test_thread_pool.vcproj
examples/timer_test/: makefile  test_timer.c
examples/timer_test/timer_test/: timer_test.sln
examples/timer_test/timer_test/timer_test/: timer_test.vcproj
include/brynet/: Version.hpp
net/: connection.c  connection.h  cpp_connection.cpp  cpp_connection.h  cpp_server.cpp  cpp_server.h  epollserver.c  epollserver.h  iocp.c  server.c  server.h  server_private.h  thread_reactor.c  thread_reactor.h
net/http/: connector.cpp  connector.h  webclient.cpp  webclient.h
server-model01/: epollserver.c  epollserver.h  iocp.c  iocp.h  server.c  server.h  server_private.h
server-model02/: epollserver.c  epollserver.h  iocp.c  iocp.h  server.c  server.h  server_private.h  thread_reactor.c  thread_reactor.h
src/examples/: BroadCastClient.cpp  BroadCastServer.cpp  Makefile  PingPongClient.cpp  PingPongServer.cpp  TestHttp.cpp  TestMultiSSDBClient.cpp  WebBinaryProxy.cpp
src/net/: Channel.h  Connector.cpp  Connector.h  CurrentThread.cpp  CurrentThread.h  DataSocket.cpp  DataSocket.h  EventLoop.cpp  EventLoop.h  (+12 more)
tests/: CMakeLists.txt  test_array.cpp  test_buffer.cpp  test_endian.cpp  test_http.cpp  test_packet.cpp  test_stack.cpp  test_sync_connect.cpp  test_timer.cpp  test_wait_group.cpp
utils/: aoi.cpp  aoi.h  crashdump.h  drpc.h  event.lua  httprequest.h  jsonrpc.h  loadtxt.cpp  loadtxt.h  lua_readtable.h  msgpackrpc.h  rpc_test.cpp  rpccommon.h  script_event.cpp  script_event.h  script_timer.cpp  script_timer.h  script_timer.lua
vsproj-12/: BroadCastClient.vcxproj  BroadCastClient.vcxproj.filters  BroadCastServer.vcxproj  BroadCastServer.vcxproj.filters  PingPongClient.vcxproj  PingPongClient.vcxproj.filters  PingPongServer.vcxproj  PingPongServer.vcxproj.filters  TestHttp.vcxproj  TestHttp.vcxproj.filters  TestSSDBMultiClient.vcxproj  TestSSDBMultiClient.vcxproj.filters
vsproj-14/: BroadCastServer.vcxproj  PingPongServer.vcxproj  TestHttp.vcxproj.filters
(+190 files in other folders)
